@@ -9501,11 +9501,17 @@ literal|false
 return|;
 block|}
 return|return
+name|Bytes
+operator|.
+name|equals
+argument_list|(
 name|this
 operator|.
-name|hashCode
+name|regionInfo
+operator|.
+name|getRegionName
 argument_list|()
-operator|==
+argument_list|,
 operator|(
 operator|(
 name|HRegion
@@ -9513,8 +9519,11 @@ operator|)
 name|o
 operator|)
 operator|.
-name|hashCode
+name|regionInfo
+operator|.
+name|getRegionName
 argument_list|()
+argument_list|)
 return|;
 block|}
 annotation|@
