@@ -12856,126 +12856,6 @@ block|}
 block|}
 end_function
 
-begin_comment
-comment|/**    * @return Returns list of non-closed regions hosted on this server. If no    *         regions to check, returns an empty list.    */
-end_comment
-
-begin_function
-specifier|protected
-name|Set
-argument_list|<
-name|HRegion
-argument_list|>
-name|getRegionsToCheck
-parameter_list|()
-block|{
-name|HashSet
-argument_list|<
-name|HRegion
-argument_list|>
-name|regionsToCheck
-init|=
-operator|new
-name|HashSet
-argument_list|<
-name|HRegion
-argument_list|>
-argument_list|()
-decl_stmt|;
-comment|// TODO: is this locking necessary?
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|lock
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-synchronized|synchronized
-init|(
-name|this
-operator|.
-name|onlineRegions
-init|)
-block|{
-name|regionsToCheck
-operator|.
-name|addAll
-argument_list|(
-name|this
-operator|.
-name|onlineRegions
-operator|.
-name|values
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-finally|finally
-block|{
-name|lock
-operator|.
-name|readLock
-argument_list|()
-operator|.
-name|unlock
-argument_list|()
-expr_stmt|;
-block|}
-comment|// Purge closed regions.
-for|for
-control|(
-specifier|final
-name|Iterator
-argument_list|<
-name|HRegion
-argument_list|>
-name|i
-init|=
-name|regionsToCheck
-operator|.
-name|iterator
-argument_list|()
-init|;
-name|i
-operator|.
-name|hasNext
-argument_list|()
-condition|;
-control|)
-block|{
-name|HRegion
-name|r
-init|=
-name|i
-operator|.
-name|next
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|r
-operator|.
-name|isClosed
-argument_list|()
-condition|)
-block|{
-name|i
-operator|.
-name|remove
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-return|return
-name|regionsToCheck
-return|;
-block|}
-end_function
-
 begin_function
 annotation|@
 name|Override
