@@ -19,134 +19,6 @@ end_package
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|Log
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|logging
-operator|.
-name|LogFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|conf
-operator|.
-name|Configuration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|DroppedSnapshotException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|HConstants
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|RemoteExceptionHandler
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|util
-operator|.
-name|Bytes
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|util
-operator|.
-name|StringUtils
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|base
-operator|.
-name|Preconditions
-import|;
-end_import
-
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -174,16 +46,6 @@ operator|.
 name|util
 operator|.
 name|ConcurrentModificationException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|EnumSet
 import|;
 end_import
 
@@ -324,6 +186,134 @@ operator|.
 name|locks
 operator|.
 name|ReentrantLock
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|DroppedSnapshotException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|HConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|RemoteExceptionHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|util
+operator|.
+name|Bytes
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|base
+operator|.
+name|Preconditions
 import|;
 end_import
 
@@ -799,26 +789,18 @@ operator|.
 name|getCopyOfOnlineRegionsSortedBySize
 argument_list|()
 decl_stmt|;
-comment|// TODO: HBASE-3532 - we can't use Set<HRegion> here because it doesn't
-comment|// implement equals correctly. So, set of region names.
 name|Set
 argument_list|<
-name|byte
-index|[]
+name|HRegion
 argument_list|>
-name|excludedRegionNames
+name|excludedRegions
 init|=
 operator|new
 name|TreeSet
 argument_list|<
-name|byte
-index|[]
+name|HRegion
 argument_list|>
-argument_list|(
-name|Bytes
-operator|.
-name|BYTES_COMPARATOR
-argument_list|)
+argument_list|()
 decl_stmt|;
 name|boolean
 name|flushedOne
@@ -840,7 +822,7 @@ name|getBiggestMemstoreRegion
 argument_list|(
 name|regionsBySize
 argument_list|,
-name|excludedRegionNames
+name|excludedRegions
 argument_list|,
 literal|true
 argument_list|)
@@ -853,7 +835,7 @@ name|getBiggestMemstoreRegion
 argument_list|(
 name|regionsBySize
 argument_list|,
-name|excludedRegionNames
+name|excludedRegions
 argument_list|,
 literal|false
 argument_list|)
@@ -1030,14 +1012,11 @@ operator|+
 literal|" - trying to find a different region to flush."
 argument_list|)
 expr_stmt|;
-name|excludedRegionNames
+name|excludedRegions
 operator|.
 name|add
 argument_list|(
 name|regionToFlush
-operator|.
-name|getRegionName
-argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1319,10 +1298,9 @@ name|regionsBySize
 parameter_list|,
 name|Set
 argument_list|<
-name|byte
-index|[]
+name|HRegion
 argument_list|>
-name|excludedRegionNames
+name|excludedRegions
 parameter_list|,
 name|boolean
 name|checkStoreFileCount
@@ -1346,14 +1324,11 @@ control|)
 block|{
 if|if
 condition|(
-name|excludedRegionNames
+name|excludedRegions
 operator|.
 name|contains
 argument_list|(
 name|region
-operator|.
-name|getRegionName
-argument_list|()
 argument_list|)
 condition|)
 block|{
